@@ -21,9 +21,13 @@
 # dirty: check which modules available
 
 from importlib import util
-import semver
 
-__version__ = semver.VersionInfo(major=1, minor=4, patch=0, prerelease="rc.2")
+try:
+    from semver.version import Version as VersionInfo
+except ImportError:
+    from semver import VersionInfo
+
+__version__ = VersionInfo(major=1, minor=5, patch=0, prerelease="rc.3")
 # to get the next version:
 # __version__.next_version(x) - with x = "major", "minor", "patch", "prerelease"
 
